# Conform-

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  docker-compose.override.yml  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
.claude/: launch.json
apps/api/: jest.config.ts  package.json  tsconfig.json
apps/web/: next.config.js  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.tsbuildinfo
docker/: Dockerfile.api  Dockerfile.api.prod  Dockerfile.web  Dockerfile.web.prod  README.md  docker-compose.dev.yml  docker-compose.prod.yml
services/rules-engine/: Dockerfile.prod  pyproject.toml
services/rules-engine/app/: config.py  main.py
services/rules-engine/app/api/: router.py
services/rules-engine/app/api/endpoints/: evaluate.py  health.py
services/rules-engine/app/engine/: executor.py  registry.py
services/rules-engine/app/engine/rules/: __init__.py  annual_update.py  base.py  critical_action.py  display_obligation.py  epi_attribution.py  epi_expiry.py  formation_expiry.py  formation_missing.py  registre_completeness.py  registre_entry_expiry.py  rps_detection.py
services/rules-engine/app/models/: request.py  response.py
services/rules-engine/app/tests/: test_annual_update.py  test_api.py  test_critical_action.py  test_display_obligation.py  test_epi_attribution.py  test_epi_expiry.py  test_executor.py  test_formation_expiry.py  test_formation_missing.py  test_registre_completeness.py  test_registre_entry_expiry.py  test_rps_detection.py
supabase/: config.toml  seed.sql
supabase/migrations/: 00002_create_sites.sql  (+29 more)
(+202 files in other folders)
